Some integration, some bug fixes